// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PasswordInput.vue renders OXD Input 1`] = `
<div class="password-container" label="Input">
  <!--v-if-->
  <div class="input-outer-wrapper">
    <!--v-if-->
    <!--v-if--><input class="oxd-input oxd-input--active password-input" label="Input" type="password">
  </div>
  <div class="password-view-icon-container"><button type="button" class="oxd-icon-button oxd-password-view-icon" tooltip="Show Password" flow="top"><i class="oxd-icon oxd-icon--large bi-eye-fill"></i></button></div>
</div>
`;

exports[`PasswordInput.vue should renders OXD Input with custom color 1`] = `
<div class="password-container" label="Input" style="background-color: aliceblue;">
  <!--v-if-->
  <div class="input-outer-wrapper">
    <!--v-if-->
    <!--v-if--><input class="oxd-input oxd-input--active password-input" style="background-color: aliceblue;" label="Input" type="password">
  </div>
  <div class="password-view-icon-container"><button type="button" class="oxd-icon-button oxd-password-view-icon" tooltip="Show Password" flow="top"><i class="oxd-icon oxd-icon--large bi-eye-fill"></i></button></div>
</div>
`;

exports[`PasswordInput.vue should renders OXD Input with custom placeholder 1`] = `
<div class="password-container" label="Input" placeholder="Custom placeholder">
  <!--v-if-->
  <div class="input-outer-wrapper">
    <!--v-if-->
    <!--v-if--><input class="oxd-input oxd-input--active password-input" label="Input" placeholder="Custom placeholder" type="password">
  </div>
  <div class="password-view-icon-container"><button type="button" class="oxd-icon-button oxd-password-view-icon" tooltip="Show Password" flow="top"><i class="oxd-icon oxd-icon--large bi-eye-fill"></i></button></div>
</div>
`;

exports[`PasswordInput.vue should renders OXD Input with error 1`] = `
<div class="password-container" label="Input">
  <!--v-if-->
  <div class="input-outer-wrapper">
    <!--v-if-->
    <!--v-if--><input class="oxd-input oxd-input--active oxd-input--error password-input" label="Input" type="password">
  </div>
  <div class="password-view-icon-container"><button type="button" class="oxd-icon-button oxd-password-view-icon" tooltip="Show Password" flow="top"><i class="oxd-icon oxd-icon--large bi-eye-fill"></i></button></div>
</div>
`;

exports[`PasswordInput.vue should renders OXD Input with error message 1`] = `
<div class="password-container" label="Input" errormessage="Error message">
  <!--v-if-->
  <div class="input-outer-wrapper">
    <!--v-if-->
    <!--v-if--><input class="oxd-input oxd-input--active oxd-input--error password-input" label="Input" errormessage="Error message" type="password">
  </div>
  <div class="password-view-icon-container"><button type="button" class="oxd-icon-button oxd-password-view-icon" tooltip="Show Password" flow="top"><i class="oxd-icon oxd-icon--large bi-eye-fill"></i></button></div>
</div>
`;

exports[`PasswordInput.vue should renders OXD Input with strength meter 1`] = `
<div class="password-container weak-strength" label="Input">
  <p class="oxd-text oxd-text--p password-strength-check">Weak</p>
  <div class="input-outer-wrapper">
    <!--v-if-->
    <!--v-if--><input class="oxd-input oxd-input--active password-input" label="Input" type="password">
  </div>
  <div class="password-view-icon-container"><button type="button" class="oxd-icon-button oxd-password-view-icon" tooltip="Show Password" flow="top"><i class="oxd-icon oxd-icon--large bi-eye-fill"></i></button></div>
</div>
`;
